--- a/scripts/train/yamls/pretrain/mpt-125m.yaml
+++ b/scripts/train/yamls/pretrain/mpt-125m.yaml
@@ -1,5 +1,5 @@
-data_local: ./my-copy-c4
-data_remote: # If blank, files must be present in data_local
+data_local: 
+data_remote: ./my-copy-c4 # If blank, files must be present in data_local
 max_seq_len: 2048
 global_seed: 17
 
@@ -9,7 +9,7 @@ run_name: # If left blank, will be read from env var $RUN_NAME
 # Model
 model:
   name: mpt_causal_lm
-  init_device: meta
+  init_device: xla
   d_model: 768
   n_heads: 12
   n_layers: 12
@@ -17,7 +17,9 @@ model:
   max_seq_len: ${max_seq_len}
   vocab_size: 50368
   attn_config:
-    attn_impl: triton
+    attn_impl: torch
+  loss_fn: torch_crossentropy
+  low_precision_layernorm: false
 
 # Tokenizer
 tokenizer:
@@ -73,7 +75,7 @@ algorithms:
 max_duration: 4800ba # ~ 2.5B tokens
 eval_interval: 500ba
 eval_first: false
-eval_subset_num_batches: -1
+eval_subset_num_batches: 1 #-1
 global_train_batch_size: 256
 
 # System
@@ -81,22 +83,22 @@ seed: ${global_seed}
 device_eval_batch_size: 16
 device_train_microbatch_size: 16
 # device_train_microbatch_size: auto
-precision: amp_bf16
+precision: fp32
 
 # FSDP
-fsdp_config:
-  sharding_strategy: FULL_SHARD
-  mixed_precision: PURE
-  activation_checkpointing: false
-  activation_checkpointing_reentrant: false
-  activation_cpu_offload: false
-  limit_all_gathers: true
-  verbose: false
+#fsdp_config:
+#  sharding_strategy: FULL_SHARD
+#  mixed_precision: PURE
+#  activation_checkpointing: false
+#  activation_checkpointing_reentrant: false
+#  activation_cpu_offload: false
+#  limit_all_gathers: true
+#  verbose: false
 
 # Logging
 progress_bar: false
 log_to_console: true
-console_log_interval: 1ba
+console_log_interval: 5ba
 
 callbacks:
   speed_monitor:
