--- a/scripts/train/yamls/pretrain/mpt-3b.yaml
+++ b/scripts/train/yamls/pretrain/mpt-3b.yaml
@@ -1,5 +1,5 @@
-data_local: ./my-copy-c4
-data_remote: # If blank, files must be present in data_local
+data_local: # ./my-copy-c4
+data_remote: /home/briankang_google_com/my-copy-c4 # If blank, files must be present in data_local
 max_seq_len: 2048
 global_seed: 17
 
@@ -9,7 +9,7 @@ run_name: # If left blank, will be read from env var $RUN_NAME
 # Model
 model:
   name: mpt_causal_lm
-  init_device: meta
+  init_device: xla
   d_model: 2560
   n_heads: 20  # Modified 32->20 so that d_head == 128 to statisfy FlashAttention
   n_layers: 32
@@ -17,7 +17,9 @@ model:
   max_seq_len: ${max_seq_len}
   vocab_size: 50368
   attn_config:
-    attn_impl: triton
+    attn_impl: torch
+  loss_fn: torch_crossentropy
+  low_precision_layernorm: false
 
 # Tokenizer
 tokenizer:
@@ -32,9 +34,11 @@ train_loader:
     local: ${data_local}
     remote: ${data_remote}
     split: train
-    shuffle: true
+    shuffle: false
     max_seq_len: ${max_seq_len}
     shuffle_seed: ${global_seed}
+    cache_limit: 200gb
+    predownload: 221184
   drop_last: true
   num_workers: 8
 
@@ -47,13 +51,14 @@ eval_loader:
     shuffle: false
     max_seq_len: ${max_seq_len}
     shuffle_seed: ${global_seed}
+    cache_limit: 60gb
   drop_last: false
   num_workers: 8
 
 # Optimization
 scheduler:
   name: cosine_with_warmup
-  t_warmup: 100ba
+  t_warmup: 1ba
   alpha_f: 0.1
 
 optimizer:
@@ -78,20 +83,20 @@ global_train_batch_size: 512
 
 # System
 seed: ${global_seed}
-device_eval_batch_size: 8
-device_train_microbatch_size: 8
+device_eval_batch_size: 4
+device_train_microbatch_size: 16
 # device_train_microbatch_size: auto
-precision: amp_bf16
+precision: fp32
 
 # FSDP
-fsdp_config:
-  sharding_strategy: FULL_SHARD
-  mixed_precision: PURE
-  activation_checkpointing: true
-  activation_checkpointing_reentrant: false
-  activation_cpu_offload: false
-  limit_all_gathers: true
-  verbose: false
+#fsdp_config:
+#  sharding_strategy: FULL_SHARD
+#  mixed_precision: PURE
+#  activation_checkpointing: true
+#  activation_checkpointing_reentrant: false
+#  activation_cpu_offload: false
+#  limit_all_gathers: true
+#  verbose: false
 
 # Logging
 progress_bar: false
